# ripper

./: .gitignore  BMPRipper.cpp  BMPRipper.h  CMakeLists.txt  Config.h.in  DDSRipper.cpp  DDSRipper.h  File.cpp  File.h  FileUnix.cpp  FileWin32.cpp  GIFRipper.cpp  GIFRipper.h  GlobalDefs.h  ICORipper.cpp  ICORipper.h  IFFRipper.cpp  IFFRipper.h  JPEGRipper.cpp  JPEGRipper.h  MIDIRipper.cpp  MIDIRipper.h  MODRipper.cpp  MODRipper.h  MPEGRipper.cpp  MPEGRipper.h  Main.cpp  PDFRipper.cpp  PDFRipper.h  PNGRipper.cpp  PNGRipper.h  PVRRipper.cpp  PVRRipper.h  PatternMatcher.cpp  PatternMatcher.h  README  RIFFRipper.cpp  RIFFRipper.h  RTFRipper.cpp  RTFRipper.h  (+10 more)
